--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,13 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.9",
 ]
 keywords = ["developer-tools", "devops"]
 dependencies = [
-    "atlassian-python-api >= 3.33.0",
-    "msgspec >= 0.13.1",
+    "atlassian-python-api >= 3.39.0",
+    "msgspec >= 0.17.0",
 ]
 requires-python = ">=3.9"
 
@@ -48,7 +49,7 @@ exclude = ["test*"]
 [tool.black]
 line-length = 120
 skip-string-normalization = true
-target-version = ["py39", "py310", "py311"]
+target-version = ["py39", "py310", "py311", "py312"]
 
 [tool.coverage.run]
 branch = true
@@ -91,7 +92,7 @@ exclude = [
     "venv",
 ]
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-target-version = "py310"
+target-version = "py311"
 unfixable = ["F401"]
 
 [tool.ruff.flake8-quotes]
