--- a/docs/book.toml
+++ b/docs/book.toml
@@ -11,7 +11,16 @@ title = "Tutkia"
 builddir = "book"
 
 [output.html]
-mathjax-support = true
-site-url = "/docs/tutkia"
+default-theme = "coal"
 git-repository-url = "https://git.sr.ht/~sthagen/tutkia"
+git-repository-icon = "fa-code-fork"
+mathjax-support = true
+no-section-label = true
+preferred-dark-theme = "navy"
+site-url = "/docs/tutkia"
 
+[output.html.print]
+enable = false
+
+[output.html.fold]
+enable = false
