--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "tutkia"
 version = "2023.2.18"
 description = "Explore (Finnish: tutkia) ticket system trees."
 readme = "README.md"
+license = {file = "LICENSE"}
 authors = [
     { name = "Stefan Hagen", email = "stefan@hagen.link" },
 ]
